@@ -16,7 +16,7 @@ foreach my $package (@prerequisite) {
 	exit;
 }
 
-plan tests => 18;
+plan tests => 25;
 
 
 my $name = 'net-dns.org';
@@ -30,7 +30,7 @@ my @data = (
 			Mw1NxETS6lm2eQTDNzLSY6dnJxZBqXypC3Of7bF3UmR/G
 			NhcFIThuV/qFq+Gs+g0TJ6eyMF6ydYhjS31k= )
 			);
-my @also = qw( sigbin );
+my @also = qw( sig vrfyerrstr );
 
 my $wire =
 '0002070200000E1052346FD7520CE2D7EDED076E65742D646E73036F7267002119428D83590A475D8E8170E941B10206BF12FC6010D97E2044AEC911FDBE5AF2B32AA77B480FA5C942FBEADA3F7FB2440FA00C81EB324230B0BB9DAA87788AEA00EF7330D4DC444D2EA59B67904C33732D263A767271641A97CA90B739FEDB17752647F18D85C1484E1B95FEA16AF86B3E8344C9E9EC8C17AC9D6218D2DF59';
@@ -86,6 +86,23 @@ my $wire =
 	ok( length $compressed == length $predecessor, 'encoded RDATA not compressible' );
 	is( $rr->encode,    $lc->encode, 'encoded RDATA names downcased' );
 	is( $rr->canonical, $lc->encode, 'canonical RDATA names downcased' );
+}
+
+
+{
+	my $rr	  = new Net::DNS::RR(". $type @data");
+	my $class = ref($rr);
+
+	$rr->algorithm('RSASHA1');
+	is( $rr->algorithm(),		  5,	     'algorithm mnemonic accepted' );
+	is( $rr->algorithm('MNEMONIC'),	  'RSASHA1', "rr->algorithm('MNEMONIC')" );
+	is( $class->algorithm('RSASHA1'), 5,	     "class method algorithm('RSASHA1')" );
+	is( $class->algorithm(5),	  'RSASHA1', "class method algorithm(5)" );
+	is( $class->algorithm(255),	  255,	     "class method algorithm(255)" );
+
+	eval { $rr->algorithm('X'); };
+	my $exception = $1 if $@ =~ /^(.+)\n/;
+	ok( $exception ||= '', "unknown mnemonic\t[$exception]" );
 }
 
 
