@@ -8,6 +8,10 @@ Feature
 	integrated with Net::DNS.  Net::DNS::SEC needs to be installed
 	to enable the signature generation and verification functions.
 
+Fix rt.cpan.org #105491
+
+	Can't call method "zclass" on an undefined value at ... Net/DNS/Packet.pm line 474
+
 Fix rt.cpan.org #105421
 
 	Dead link in Net::DNS::FAQ
